force-app/main/default/objects/TXN_Step_Log_Event__e/TXN_Step_Log_Event__e.object-meta.xml
<CustomObject>
    <label>TXN Step Log Event</label>
    <pluralLabel>TXN Step Log Events</pluralLabel>
</CustomObject>