force-app/main/default/objects/TXN_Step_Log_Event__e/fields/DML_Statements_Used__c.field-meta.xml
<CustomField>
    <fullName>DML_Statements_Used__c</fullName>
    <label>DML Statements Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>