force-app/main/default/objects/TXN_Step_Log_Event__e/fields/DML_Type__c.field-meta.xml
<CustomField>
    <fullName>DML_Type__c</fullName>
    <label>DML Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>