force-app/main/default/objects/TXN_Step_Log_Event__e/fields/Heap_Size_Used_bytes__c.field-meta.xml
<CustomField>
    <fullName>Heap_Size_Used_bytes__c</fullName>
    <label>Heap Size Used bytes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>