force-app/main/default/objects/TXN_Step_Log_Event__e/fields/SOQL_Queries_Used__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Queries_Used__c</fullName>
    <label>SOQL Queries Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>