force-app/main/default/objects/TXN_Step_Log_Event__e/fields/Step_Key__c.field-meta.xml
<CustomField>
    <fullName>Step_Key__c</fullName>
    <label>Step Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>