force-app/main/default/objects/TXN_Step_Log_Event__e/fields/Step_Name__c.field-meta.xml
<CustomField>
    <fullName>Step_Name__c</fullName>
    <label>Step Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>