force-app/main/default/objects/TXN_Step_Log_Event__e/fields/Step_Type__c.field-meta.xml
<CustomField>
    <fullName>Step_Type__c</fullName>
    <label>Step Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>