force-app/main/default/objects/TXN_Step_Log_Event__e/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <label>Transaction Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>